# gefs-temperature-bias-correction

./: 01_mean_bias_correction_with_source_files.ipynb  README.md  __init__.py  bias_correction.py  config.py  paths.py  preprocessing.py  pyproject.toml  requirements.txt  setup.py  time_utils.py  verification.py
gefs_bias_correction/: config.py  data_access.py  mean_bias.py  plotting.py  preprocessing.py  pyproject.toml  quantile_mapping.py  split.py  synthetic.py  verification.py
notebooks/: 01_mean_bias_correction_with_source_files.ipynb
