[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gefs-temperature-bias-correction"
version = "0.1.0"
description = "GEFS 2-m temperature mean-bias correction and verification workflow"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Youkyoung Jang"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "xarray>=2024.1.0",
  "matplotlib>=3.7",
  "requests>=2.31",
  "herbie-data>=2025.2.0",
  "cfgrib>=0.9.10",
  "eccodes>=2.37.0",
  "s3fs>=2024.1.0",
  "fsspec>=2024.1.0",
]

[project.optional-dependencies]
plots = ["cartopy>=0.23"]
dev = ["jupyter", "ipykernel", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]
